// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`entrypoint adds validators into fieldsets 1`] = `
{
  "kind": "record",
  "nullable": false,
  "record": {
    "name": {
      "kind": "field",
      "nullable": false,
      "required": true,
      "type": "string",
      "validate": {
        "exprs": [
          {
            "args": [
              {
                "kind": "literal",
                "literal": {
                  "kind": "integer",
                  "value": 4,
                },
              },
            ],
            "kind": "call",
            "validator": "minLength",
          },
          {
            "args": [
              {
                "kind": "literal",
                "literal": {
                  "kind": "integer",
                  "value": 100,
                },
              },
            ],
            "kind": "call",
            "validator": "maxLength",
          },
        ],
        "kind": "and",
      },
    },
  },
}
`;

exports[`entrypoint collects dependencies 1`] = `
{
  "actionSelects": [
    [
      "id",
      "name",
    ],
    [
      "id",
    ],
  ],
  "orgSelect": [
    "id",
    "name",
    "desc",
    "repoCount",
    "coef",
  ],
  "repoSelect": [
    "id",
    "name",
  ],
}
`;

exports[`entrypoint composes basic example 1`] = `
[
  {
    "endpoints": [
      {
        "authSelect": [],
        "authorize": undefined,
        "filter": undefined,
        "kind": "list",
        "orderBy": [
          {
            "direction": "desc",
            "exp": {
              "kind": "identifier-path",
              "namePath": [
                "Org",
                "slug",
              ],
            },
          },
        ],
        "pageable": true,
        "parentContext": [],
        "response": [
          {
            "alias": "id",
            "expr": {
              "kind": "identifier-path",
              "namePath": [
                "Org",
                "id",
              ],
            },
            "kind": "expression",
            "type": {
              "kind": "integer",
              "nullable": false,
            },
          },
          {
            "alias": "slug",
            "expr": {
              "kind": "identifier-path",
              "namePath": [
                "Org",
                "slug",
              ],
            },
            "kind": "expression",
            "type": {
              "kind": "string",
              "nullable": false,
            },
          },
          {
            "alias": "name",
            "expr": {
              "kind": "identifier-path",
              "namePath": [
                "Org",
                "name",
              ],
            },
            "kind": "expression",
            "type": {
              "kind": "string",
              "nullable": false,
            },
          },
        ],
        "target": {
          "alias": "org",
          "kind": "model",
          "name": "Org",
          "namePath": [
            "Org",
          ],
          "retType": "Org",
          "select": [
            {
              "alias": "id",
              "expr": {
                "kind": "identifier-path",
                "namePath": [
                  "Org",
                  "id",
                ],
              },
              "kind": "expression",
              "type": {
                "kind": "integer",
                "nullable": false,
              },
            },
          ],
        },
      },
      {
        "authSelect": [],
        "authorize": undefined,
        "kind": "get",
        "parentContext": [],
        "response": [
          {
            "alias": "id",
            "expr": {
              "kind": "identifier-path",
              "namePath": [
                "Org",
                "id",
              ],
            },
            "kind": "expression",
            "type": {
              "kind": "integer",
              "nullable": false,
            },
          },
          {
            "alias": "slug",
            "expr": {
              "kind": "identifier-path",
              "namePath": [
                "Org",
                "slug",
              ],
            },
            "kind": "expression",
            "type": {
              "kind": "string",
              "nullable": false,
            },
          },
          {
            "alias": "name",
            "expr": {
              "kind": "identifier-path",
              "namePath": [
                "Org",
                "name",
              ],
            },
            "kind": "expression",
            "type": {
              "kind": "string",
              "nullable": false,
            },
          },
        ],
        "target": {
          "alias": "org",
          "identifyWith": {
            "paramName": "org_slug",
            "path": [
              "slug",
            ],
            "type": "string",
          },
          "kind": "model",
          "name": "Org",
          "namePath": [
            "Org",
          ],
          "retType": "Org",
          "select": [
            {
              "alias": "id",
              "expr": {
                "kind": "identifier-path",
                "namePath": [
                  "Org",
                  "id",
                ],
              },
              "kind": "expression",
              "type": {
                "kind": "integer",
                "nullable": false,
              },
            },
          ],
        },
      },
    ],
    "entrypoints": [
      {
        "endpoints": [
          {
            "authSelect": [],
            "authorize": undefined,
            "filter": undefined,
            "kind": "list",
            "orderBy": undefined,
            "pageable": false,
            "parentContext": [
              {
                "alias": "org",
                "identifyWith": {
                  "paramName": "org_slug",
                  "path": [
                    "slug",
                  ],
                  "type": "string",
                },
                "kind": "model",
                "name": "Org",
                "namePath": [
                  "Org",
                ],
                "retType": "Org",
                "select": [
                  {
                    "alias": "id",
                    "expr": {
                      "kind": "identifier-path",
                      "namePath": [
                        "Org",
                        "id",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "integer",
                      "nullable": false,
                    },
                  },
                ],
              },
            ],
            "response": [
              {
                "alias": "id",
                "expr": {
                  "kind": "identifier-path",
                  "namePath": [
                    "Org",
                    "repos",
                    "id",
                  ],
                },
                "kind": "expression",
                "type": {
                  "kind": "integer",
                  "nullable": false,
                },
              },
              {
                "alias": "org",
                "kind": "nested-select",
                "namePath": [
                  "Org",
                  "repos",
                  "org",
                ],
                "refKey": "Repo.org",
                "select": [
                  {
                    "alias": "id",
                    "expr": {
                      "kind": "identifier-path",
                      "namePath": [
                        "Org",
                        "repos",
                        "org",
                        "id",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "integer",
                      "nullable": false,
                    },
                  },
                  {
                    "alias": "slug",
                    "expr": {
                      "kind": "identifier-path",
                      "namePath": [
                        "Org",
                        "repos",
                        "org",
                        "slug",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "string",
                      "nullable": false,
                    },
                  },
                  {
                    "alias": "name",
                    "expr": {
                      "kind": "identifier-path",
                      "namePath": [
                        "Org",
                        "repos",
                        "org",
                        "name",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "string",
                      "nullable": false,
                    },
                  },
                ],
              },
            ],
            "target": {
              "alias": "$target_1",
              "kind": "relation",
              "name": "repos",
              "namePath": [
                "Org",
                "repos",
              ],
              "retType": "Repo",
              "select": [
                {
                  "alias": "id",
                  "expr": {
                    "kind": "identifier-path",
                    "namePath": [
                      "Org",
                      "repos",
                      "id",
                    ],
                  },
                  "kind": "expression",
                  "type": {
                    "kind": "integer",
                    "nullable": false,
                  },
                },
              ],
            },
          },
          {
            "authSelect": [],
            "authorize": undefined,
            "kind": "get",
            "parentContext": [
              {
                "alias": "org",
                "identifyWith": {
                  "paramName": "org_slug",
                  "path": [
                    "slug",
                  ],
                  "type": "string",
                },
                "kind": "model",
                "name": "Org",
                "namePath": [
                  "Org",
                ],
                "retType": "Org",
                "select": [
                  {
                    "alias": "id",
                    "expr": {
                      "kind": "identifier-path",
                      "namePath": [
                        "Org",
                        "id",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "integer",
                      "nullable": false,
                    },
                  },
                ],
              },
            ],
            "response": [
              {
                "alias": "id",
                "expr": {
                  "kind": "identifier-path",
                  "namePath": [
                    "Org",
                    "repos",
                    "id",
                  ],
                },
                "kind": "expression",
                "type": {
                  "kind": "integer",
                  "nullable": false,
                },
              },
              {
                "alias": "org",
                "kind": "nested-select",
                "namePath": [
                  "Org",
                  "repos",
                  "org",
                ],
                "refKey": "Repo.org",
                "select": [
                  {
                    "alias": "id",
                    "expr": {
                      "kind": "identifier-path",
                      "namePath": [
                        "Org",
                        "repos",
                        "org",
                        "id",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "integer",
                      "nullable": false,
                    },
                  },
                  {
                    "alias": "slug",
                    "expr": {
                      "kind": "identifier-path",
                      "namePath": [
                        "Org",
                        "repos",
                        "org",
                        "slug",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "string",
                      "nullable": false,
                    },
                  },
                  {
                    "alias": "name",
                    "expr": {
                      "kind": "identifier-path",
                      "namePath": [
                        "Org",
                        "repos",
                        "org",
                        "name",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "string",
                      "nullable": false,
                    },
                  },
                ],
              },
            ],
            "target": {
              "alias": "$target_1",
              "identifyWith": {
                "paramName": "repo_id",
                "path": [
                  "id",
                ],
                "type": "integer",
              },
              "kind": "relation",
              "name": "repos",
              "namePath": [
                "Org",
                "repos",
              ],
              "retType": "Repo",
              "select": [
                {
                  "alias": "id",
                  "expr": {
                    "kind": "identifier-path",
                    "namePath": [
                      "Org",
                      "repos",
                      "id",
                    ],
                  },
                  "kind": "expression",
                  "type": {
                    "kind": "integer",
                    "nullable": false,
                  },
                },
              ],
            },
          },
          {
            "actions": [
              {
                "alias": "$action_0",
                "changeset": [
                  {
                    "fieldsetPath": [
                      "title",
                    ],
                    "kind": "input",
                    "name": "title",
                    "setter": {
                      "kind": "alias-reference",
                      "path": [
                        "title",
                      ],
                      "source": "fieldset",
                    },
                    "validate": undefined,
                  },
                  {
                    "kind": "basic",
                    "name": "org_id",
                    "setter": {
                      "kind": "alias-reference",
                      "path": [
                        "org",
                        "id",
                      ],
                      "source": "aliases",
                    },
                  },
                ],
                "isPrimary": true,
                "kind": "create-one",
                "model": "Repo",
                "select": [
                  {
                    "alias": "id",
                    "expr": {
                      "kind": "identifier-path",
                      "namePath": [
                        "$action_0",
                        "id",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "integer",
                      "nullable": false,
                    },
                  },
                ],
                "targetPath": [
                  "repos",
                ],
              },
            ],
            "authSelect": [],
            "authorize": undefined,
            "fieldset": {
              "kind": "record",
              "nullable": false,
              "record": {
                "title": {
                  "kind": "field",
                  "nullable": false,
                  "required": true,
                  "type": "string",
                  "validate": undefined,
                },
              },
            },
            "kind": "create",
            "parentContext": [
              {
                "alias": "org",
                "identifyWith": {
                  "paramName": "org_slug",
                  "path": [
                    "slug",
                  ],
                  "type": "string",
                },
                "kind": "model",
                "name": "Org",
                "namePath": [
                  "Org",
                ],
                "retType": "Org",
                "select": [
                  {
                    "alias": "id",
                    "expr": {
                      "kind": "identifier-path",
                      "namePath": [
                        "Org",
                        "id",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "integer",
                      "nullable": false,
                    },
                  },
                ],
              },
            ],
            "response": [
              {
                "alias": "id",
                "expr": {
                  "kind": "identifier-path",
                  "namePath": [
                    "Org",
                    "repos",
                    "id",
                  ],
                },
                "kind": "expression",
                "type": {
                  "kind": "integer",
                  "nullable": false,
                },
              },
              {
                "alias": "org",
                "kind": "nested-select",
                "namePath": [
                  "Org",
                  "repos",
                  "org",
                ],
                "refKey": "Repo.org",
                "select": [
                  {
                    "alias": "id",
                    "expr": {
                      "kind": "identifier-path",
                      "namePath": [
                        "Org",
                        "repos",
                        "org",
                        "id",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "integer",
                      "nullable": false,
                    },
                  },
                  {
                    "alias": "slug",
                    "expr": {
                      "kind": "identifier-path",
                      "namePath": [
                        "Org",
                        "repos",
                        "org",
                        "slug",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "string",
                      "nullable": false,
                    },
                  },
                  {
                    "alias": "name",
                    "expr": {
                      "kind": "identifier-path",
                      "namePath": [
                        "Org",
                        "repos",
                        "org",
                        "name",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "string",
                      "nullable": false,
                    },
                  },
                ],
              },
            ],
            "target": {
              "alias": "$target_1",
              "kind": "relation",
              "name": "repos",
              "namePath": [
                "Org",
                "repos",
              ],
              "retType": "Repo",
              "select": [
                {
                  "alias": "id",
                  "expr": {
                    "kind": "identifier-path",
                    "namePath": [
                      "Org",
                      "repos",
                      "id",
                    ],
                  },
                  "kind": "expression",
                  "type": {
                    "kind": "integer",
                    "nullable": false,
                  },
                },
              ],
            },
          },
          {
            "actions": [
              {
                "alias": "newOrg",
                "changeset": [
                  {
                    "fieldsetPath": [
                      "newOrg",
                      "slug",
                    ],
                    "kind": "input",
                    "name": "slug",
                    "setter": {
                      "kind": "alias-reference",
                      "path": [
                        "newOrg",
                        "slug",
                      ],
                      "source": "fieldset",
                    },
                    "validate": undefined,
                  },
                  {
                    "fieldsetPath": [
                      "newOrg",
                      "name",
                    ],
                    "kind": "input",
                    "name": "name",
                    "setter": {
                      "kind": "alias-reference",
                      "path": [
                        "newOrg",
                        "name",
                      ],
                      "source": "fieldset",
                    },
                    "validate": undefined,
                  },
                ],
                "filter": undefined,
                "isPrimary": false,
                "kind": "update-one",
                "model": "Org",
                "select": [
                  {
                    "alias": "id",
                    "expr": {
                      "kind": "identifier-path",
                      "namePath": [
                        "newOrg",
                        "id",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "integer",
                      "nullable": false,
                    },
                  },
                ],
                "targetPath": [
                  "org",
                ],
              },
            ],
            "authSelect": [],
            "authorize": undefined,
            "fieldset": {
              "kind": "record",
              "nullable": false,
              "record": {
                "newOrg": {
                  "kind": "record",
                  "nullable": false,
                  "record": {
                    "name": {
                      "kind": "field",
                      "nullable": false,
                      "required": false,
                      "type": "string",
                      "validate": undefined,
                    },
                    "slug": {
                      "kind": "field",
                      "nullable": false,
                      "required": false,
                      "type": "string",
                      "validate": undefined,
                    },
                  },
                },
              },
            },
            "kind": "custom-one",
            "method": "PATCH",
            "parentContext": [
              {
                "alias": "org",
                "identifyWith": {
                  "paramName": "org_slug",
                  "path": [
                    "slug",
                  ],
                  "type": "string",
                },
                "kind": "model",
                "name": "Org",
                "namePath": [
                  "Org",
                ],
                "retType": "Org",
                "select": [
                  {
                    "alias": "id",
                    "expr": {
                      "kind": "identifier-path",
                      "namePath": [
                        "Org",
                        "id",
                      ],
                    },
                    "kind": "expression",
                    "type": {
                      "kind": "integer",
                      "nullable": false,
                    },
                  },
                ],
              },
            ],
            "path": "somePath",
            "responds": true,
            "response": undefined,
            "target": {
              "alias": "$target_1",
              "identifyWith": {
                "paramName": "repo_id",
                "path": [
                  "id",
                ],
                "type": "integer",
              },
              "kind": "relation",
              "name": "repos",
              "namePath": [
                "Org",
                "repos",
              ],
              "retType": "Repo",
              "select": [
                {
                  "alias": "id",
                  "expr": {
                    "kind": "identifier-path",
                    "namePath": [
                      "Org",
                      "repos",
                      "id",
                    ],
                  },
                  "kind": "expression",
                  "type": {
                    "kind": "integer",
                    "nullable": false,
                  },
                },
              ],
            },
          },
        ],
        "entrypoints": [],
        "name": "",
        "target": {
          "alias": "$target_1",
          "identifyWith": {
            "paramName": "repo_id",
            "path": [
              "id",
            ],
            "type": "integer",
          },
          "kind": "relation",
          "name": "repos",
          "namePath": [
            "Org",
            "repos",
          ],
          "retType": "Repo",
        },
      },
    ],
    "name": "",
    "target": {
      "alias": "org",
      "identifyWith": {
        "paramName": "org_slug",
        "path": [
          "slug",
        ],
        "type": "string",
      },
      "kind": "model",
      "name": "Org",
      "namePath": [
        "Org",
      ],
      "retType": "Org",
    },
  },
]
`;

exports[`entrypoint composes single cardinality 1`] = `
{
  "endpoints": [
    {
      "authSelect": [],
      "authorize": undefined,
      "kind": "get",
      "parentContext": [
        {
          "alias": "$target_0",
          "identifyWith": {
            "paramName": "user_id",
            "path": [
              "id",
            ],
            "type": "integer",
          },
          "kind": "model",
          "name": "User",
          "namePath": [
            "User",
          ],
          "retType": "User",
          "select": [
            {
              "alias": "id",
              "expr": {
                "kind": "identifier-path",
                "namePath": [
                  "User",
                  "id",
                ],
              },
              "kind": "expression",
              "type": {
                "kind": "integer",
                "nullable": false,
              },
            },
          ],
        },
      ],
      "response": [
        {
          "alias": "id",
          "expr": {
            "kind": "identifier-path",
            "namePath": [
              "User",
              "address",
              "id",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "integer",
            "nullable": false,
          },
        },
        {
          "alias": "name",
          "expr": {
            "kind": "identifier-path",
            "namePath": [
              "User",
              "address",
              "name",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "string",
            "nullable": false,
          },
        },
      ],
      "target": {
        "alias": "$target_1",
        "identifyWith": undefined,
        "kind": "reference",
        "name": "address",
        "namePath": [
          "User",
          "address",
        ],
        "retType": "Address",
        "select": [
          {
            "alias": "id",
            "expr": {
              "kind": "identifier-path",
              "namePath": [
                "User",
                "address",
                "id",
              ],
            },
            "kind": "expression",
            "type": {
              "kind": "integer",
              "nullable": false,
            },
          },
        ],
      },
    },
    {
      "actions": [
        {
          "alias": "$action_0",
          "changeset": [
            {
              "fieldsetPath": [
                "name",
              ],
              "kind": "input",
              "name": "name",
              "setter": {
                "kind": "alias-reference",
                "path": [
                  "name",
                ],
                "source": "fieldset",
              },
              "validate": undefined,
            },
          ],
          "filter": undefined,
          "isPrimary": true,
          "kind": "update-one",
          "model": "Address",
          "select": [
            {
              "alias": "id",
              "expr": {
                "kind": "identifier-path",
                "namePath": [
                  "$action_0",
                  "id",
                ],
              },
              "kind": "expression",
              "type": {
                "kind": "integer",
                "nullable": false,
              },
            },
          ],
          "targetPath": [
            "$target_1",
          ],
        },
      ],
      "authSelect": [],
      "authorize": undefined,
      "fieldset": {
        "kind": "record",
        "nullable": false,
        "record": {
          "name": {
            "kind": "field",
            "nullable": false,
            "required": false,
            "type": "string",
            "validate": undefined,
          },
        },
      },
      "kind": "update",
      "parentContext": [
        {
          "alias": "$target_0",
          "identifyWith": {
            "paramName": "user_id",
            "path": [
              "id",
            ],
            "type": "integer",
          },
          "kind": "model",
          "name": "User",
          "namePath": [
            "User",
          ],
          "retType": "User",
          "select": [
            {
              "alias": "id",
              "expr": {
                "kind": "identifier-path",
                "namePath": [
                  "User",
                  "id",
                ],
              },
              "kind": "expression",
              "type": {
                "kind": "integer",
                "nullable": false,
              },
            },
          ],
        },
      ],
      "response": [
        {
          "alias": "id",
          "expr": {
            "kind": "identifier-path",
            "namePath": [
              "User",
              "address",
              "id",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "integer",
            "nullable": false,
          },
        },
        {
          "alias": "name",
          "expr": {
            "kind": "identifier-path",
            "namePath": [
              "User",
              "address",
              "name",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "string",
            "nullable": false,
          },
        },
      ],
      "target": {
        "alias": "$target_1",
        "identifyWith": undefined,
        "kind": "reference",
        "name": "address",
        "namePath": [
          "User",
          "address",
        ],
        "retType": "Address",
        "select": [
          {
            "alias": "id",
            "expr": {
              "kind": "identifier-path",
              "namePath": [
                "User",
                "address",
                "id",
              ],
            },
            "kind": "expression",
            "type": {
              "kind": "integer",
              "nullable": false,
            },
          },
        ],
      },
    },
    {
      "actions": [],
      "authSelect": [],
      "authorize": undefined,
      "fieldset": undefined,
      "kind": "custom-one",
      "method": "GET",
      "parentContext": [
        {
          "alias": "$target_0",
          "identifyWith": {
            "paramName": "user_id",
            "path": [
              "id",
            ],
            "type": "integer",
          },
          "kind": "model",
          "name": "User",
          "namePath": [
            "User",
          ],
          "retType": "User",
          "select": [
            {
              "alias": "id",
              "expr": {
                "kind": "identifier-path",
                "namePath": [
                  "User",
                  "id",
                ],
              },
              "kind": "expression",
              "type": {
                "kind": "integer",
                "nullable": false,
              },
            },
          ],
        },
      ],
      "path": "custom",
      "responds": true,
      "response": undefined,
      "target": {
        "alias": "$target_1",
        "identifyWith": undefined,
        "kind": "reference",
        "name": "address",
        "namePath": [
          "User",
          "address",
        ],
        "retType": "Address",
        "select": [
          {
            "alias": "id",
            "expr": {
              "kind": "identifier-path",
              "namePath": [
                "User",
                "address",
                "id",
              ],
            },
            "kind": "expression",
            "type": {
              "kind": "integer",
              "nullable": false,
            },
          },
        ],
      },
    },
  ],
  "entrypoints": [],
  "name": "",
  "target": {
    "alias": "$target_1",
    "identifyWith": undefined,
    "kind": "reference",
    "name": "address",
    "namePath": [
      "User",
      "address",
    ],
    "retType": "Address",
  },
}
`;

exports[`entrypoint composes single cardinality 2`] = `
{
  "endpoints": [
    {
      "actions": [
        {
          "alias": "$action_0",
          "changeset": [
            {
              "fieldsetPath": [
                "text",
              ],
              "kind": "input",
              "name": "text",
              "setter": {
                "kind": "alias-reference",
                "path": [
                  "text",
                ],
                "source": "fieldset",
              },
              "validate": undefined,
            },
          ],
          "isPrimary": true,
          "kind": "create-one",
          "model": "Details",
          "select": [
            {
              "alias": "id",
              "expr": {
                "kind": "identifier-path",
                "namePath": [
                  "$action_0",
                  "id",
                ],
              },
              "kind": "expression",
              "type": {
                "kind": "integer",
                "nullable": false,
              },
            },
          ],
          "targetPath": [
            "details",
          ],
        },
        {
          "alias": "$action_0_reference",
          "changeset": [
            {
              "kind": "basic",
              "name": "details_id",
              "setter": {
                "kind": "alias-reference",
                "path": [
                  "$target_0",
                  "id",
                ],
                "source": "aliases",
              },
            },
          ],
          "filter": undefined,
          "isPrimary": false,
          "kind": "update-one",
          "model": "User",
          "select": [
            {
              "alias": "id",
              "expr": {
                "kind": "identifier-path",
                "namePath": [
                  "$action_0_reference",
                  "id",
                ],
              },
              "kind": "expression",
              "type": {
                "kind": "integer",
                "nullable": false,
              },
            },
          ],
          "targetPath": [
            "$target_0",
          ],
        },
      ],
      "authSelect": [],
      "authorize": undefined,
      "fieldset": {
        "kind": "record",
        "nullable": false,
        "record": {
          "text": {
            "kind": "field",
            "nullable": false,
            "required": true,
            "type": "string",
            "validate": undefined,
          },
        },
      },
      "kind": "create",
      "parentContext": [
        {
          "alias": "$target_0",
          "identifyWith": {
            "paramName": "user_id",
            "path": [
              "id",
            ],
            "type": "integer",
          },
          "kind": "model",
          "name": "User",
          "namePath": [
            "User",
          ],
          "retType": "User",
          "select": [
            {
              "alias": "id",
              "expr": {
                "kind": "identifier-path",
                "namePath": [
                  "User",
                  "id",
                ],
              },
              "kind": "expression",
              "type": {
                "kind": "integer",
                "nullable": false,
              },
            },
          ],
        },
      ],
      "response": [
        {
          "alias": "id",
          "expr": {
            "kind": "identifier-path",
            "namePath": [
              "User",
              "details",
              "id",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "integer",
            "nullable": false,
          },
        },
        {
          "alias": "text",
          "expr": {
            "kind": "identifier-path",
            "namePath": [
              "User",
              "details",
              "text",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "string",
            "nullable": false,
          },
        },
      ],
      "target": {
        "alias": "$target_1",
        "kind": "reference",
        "name": "details",
        "namePath": [
          "User",
          "details",
        ],
        "retType": "Details",
        "select": [
          {
            "alias": "id",
            "expr": {
              "kind": "identifier-path",
              "namePath": [
                "User",
                "details",
                "id",
              ],
            },
            "kind": "expression",
            "type": {
              "kind": "integer",
              "nullable": false,
            },
          },
        ],
      },
    },
    {
      "actions": [
        {
          "kind": "delete-one",
          "model": "Details",
          "targetPath": [
            "$target_1",
          ],
        },
      ],
      "authSelect": [],
      "authorize": undefined,
      "kind": "delete",
      "parentContext": [
        {
          "alias": "$target_0",
          "identifyWith": {
            "paramName": "user_id",
            "path": [
              "id",
            ],
            "type": "integer",
          },
          "kind": "model",
          "name": "User",
          "namePath": [
            "User",
          ],
          "retType": "User",
          "select": [
            {
              "alias": "id",
              "expr": {
                "kind": "identifier-path",
                "namePath": [
                  "User",
                  "id",
                ],
              },
              "kind": "expression",
              "type": {
                "kind": "integer",
                "nullable": false,
              },
            },
          ],
        },
      ],
      "response": undefined,
      "target": {
        "alias": "$target_1",
        "identifyWith": undefined,
        "kind": "reference",
        "name": "details",
        "namePath": [
          "User",
          "details",
        ],
        "retType": "Details",
        "select": [
          {
            "alias": "id",
            "expr": {
              "kind": "identifier-path",
              "namePath": [
                "User",
                "details",
                "id",
              ],
            },
            "kind": "expression",
            "type": {
              "kind": "integer",
              "nullable": false,
            },
          },
        ],
      },
    },
  ],
  "entrypoints": [],
  "name": "",
  "target": {
    "alias": "$target_1",
    "identifyWith": undefined,
    "kind": "reference",
    "name": "details",
    "namePath": [
      "User",
      "details",
    ],
    "retType": "Details",
  },
}
`;

exports[`entrypoint composes single cardinality 3`] = `
{
  "endpoints": [
    {
      "actions": [
        {
          "alias": "$action_0",
          "changeset": [
            {
              "fieldsetPath": [
                "name",
              ],
              "kind": "input",
              "name": "name",
              "setter": {
                "kind": "alias-reference",
                "path": [
                  "name",
                ],
                "source": "fieldset",
              },
              "validate": undefined,
            },
            {
              "kind": "basic",
              "name": "address_id",
              "setter": {
                "kind": "alias-reference",
                "path": [
                  "$target_0",
                  "id",
                ],
                "source": "aliases",
              },
            },
            {
              "fieldsetPath": [
                "details_id",
              ],
              "kind": "input",
              "name": "details_id",
              "setter": {
                "kind": "alias-reference",
                "path": [
                  "details_id",
                ],
                "source": "fieldset",
              },
              "validate": undefined,
            },
          ],
          "isPrimary": true,
          "kind": "create-one",
          "model": "User",
          "select": [
            {
              "alias": "id",
              "expr": {
                "kind": "identifier-path",
                "namePath": [
                  "$action_0",
                  "id",
                ],
              },
              "kind": "expression",
              "type": {
                "kind": "integer",
                "nullable": false,
              },
            },
          ],
          "targetPath": [
            "user",
          ],
        },
      ],
      "authSelect": [],
      "authorize": undefined,
      "fieldset": {
        "kind": "record",
        "nullable": false,
        "record": {
          "details_id": {
            "kind": "field",
            "nullable": true,
            "required": true,
            "type": "integer",
            "validate": undefined,
          },
          "name": {
            "kind": "field",
            "nullable": false,
            "required": true,
            "type": "string",
            "validate": undefined,
          },
        },
      },
      "kind": "create",
      "parentContext": [
        {
          "alias": "$target_0",
          "identifyWith": {
            "paramName": "address_id",
            "path": [
              "id",
            ],
            "type": "integer",
          },
          "kind": "model",
          "name": "Address",
          "namePath": [
            "Address",
          ],
          "retType": "Address",
          "select": [
            {
              "alias": "id",
              "expr": {
                "kind": "identifier-path",
                "namePath": [
                  "Address",
                  "id",
                ],
              },
              "kind": "expression",
              "type": {
                "kind": "integer",
                "nullable": false,
              },
            },
          ],
        },
      ],
      "response": [
        {
          "alias": "id",
          "expr": {
            "kind": "identifier-path",
            "namePath": [
              "Address",
              "user",
              "id",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "integer",
            "nullable": false,
          },
        },
        {
          "alias": "name",
          "expr": {
            "kind": "identifier-path",
            "namePath": [
              "Address",
              "user",
              "name",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "string",
            "nullable": false,
          },
        },
        {
          "alias": "address_id",
          "expr": {
            "kind": "identifier-path",
            "namePath": [
              "Address",
              "user",
              "address_id",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "integer",
            "nullable": false,
          },
        },
        {
          "alias": "details_id",
          "expr": {
            "kind": "identifier-path",
            "namePath": [
              "Address",
              "user",
              "details_id",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "integer",
            "nullable": true,
          },
        },
      ],
      "target": {
        "alias": "$target_1",
        "kind": "relation",
        "name": "user",
        "namePath": [
          "Address",
          "user",
        ],
        "retType": "User",
        "select": [
          {
            "alias": "id",
            "expr": {
              "kind": "identifier-path",
              "namePath": [
                "Address",
                "user",
                "id",
              ],
            },
            "kind": "expression",
            "type": {
              "kind": "integer",
              "nullable": false,
            },
          },
        ],
      },
    },
    {
      "authSelect": [],
      "authorize": undefined,
      "kind": "get",
      "parentContext": [
        {
          "alias": "$target_0",
          "identifyWith": {
            "paramName": "address_id",
            "path": [
              "id",
            ],
            "type": "integer",
          },
          "kind": "model",
          "name": "Address",
          "namePath": [
            "Address",
          ],
          "retType": "Address",
          "select": [
            {
              "alias": "id",
              "expr": {
                "kind": "identifier-path",
                "namePath": [
                  "Address",
                  "id",
                ],
              },
              "kind": "expression",
              "type": {
                "kind": "integer",
                "nullable": false,
              },
            },
          ],
        },
      ],
      "response": [
        {
          "alias": "id",
          "expr": {
            "kind": "identifier-path",
            "namePath": [
              "Address",
              "user",
              "id",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "integer",
            "nullable": false,
          },
        },
        {
          "alias": "name",
          "expr": {
            "kind": "identifier-path",
            "namePath": [
              "Address",
              "user",
              "name",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "string",
            "nullable": false,
          },
        },
        {
          "alias": "address_id",
          "expr": {
            "kind": "identifier-path",
            "namePath": [
              "Address",
              "user",
              "address_id",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "integer",
            "nullable": false,
          },
        },
        {
          "alias": "details_id",
          "expr": {
            "kind": "identifier-path",
            "namePath": [
              "Address",
              "user",
              "details_id",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "integer",
            "nullable": true,
          },
        },
      ],
      "target": {
        "alias": "$target_1",
        "identifyWith": undefined,
        "kind": "relation",
        "name": "user",
        "namePath": [
          "Address",
          "user",
        ],
        "retType": "User",
        "select": [
          {
            "alias": "id",
            "expr": {
              "kind": "identifier-path",
              "namePath": [
                "Address",
                "user",
                "id",
              ],
            },
            "kind": "expression",
            "type": {
              "kind": "integer",
              "nullable": false,
            },
          },
        ],
      },
    },
    {
      "actions": [
        {
          "alias": "$action_0",
          "changeset": [
            {
              "fieldsetPath": [
                "name",
              ],
              "kind": "input",
              "name": "name",
              "setter": {
                "kind": "alias-reference",
                "path": [
                  "name",
                ],
                "source": "fieldset",
              },
              "validate": undefined,
            },
            {
              "fieldsetPath": [
                "address_id",
              ],
              "kind": "input",
              "name": "address_id",
              "setter": {
                "kind": "alias-reference",
                "path": [
                  "address_id",
                ],
                "source": "fieldset",
              },
              "validate": undefined,
            },
            {
              "fieldsetPath": [
                "details_id",
              ],
              "kind": "input",
              "name": "details_id",
              "setter": {
                "kind": "alias-reference",
                "path": [
                  "details_id",
                ],
                "source": "fieldset",
              },
              "validate": undefined,
            },
          ],
          "filter": undefined,
          "isPrimary": true,
          "kind": "update-one",
          "model": "User",
          "select": [
            {
              "alias": "id",
              "expr": {
                "kind": "identifier-path",
                "namePath": [
                  "$action_0",
                  "id",
                ],
              },
              "kind": "expression",
              "type": {
                "kind": "integer",
                "nullable": false,
              },
            },
          ],
          "targetPath": [
            "$target_1",
          ],
        },
      ],
      "authSelect": [],
      "authorize": undefined,
      "fieldset": {
        "kind": "record",
        "nullable": false,
        "record": {
          "address_id": {
            "kind": "field",
            "nullable": false,
            "required": false,
            "type": "integer",
            "validate": undefined,
          },
          "details_id": {
            "kind": "field",
            "nullable": true,
            "required": false,
            "type": "integer",
            "validate": undefined,
          },
          "name": {
            "kind": "field",
            "nullable": false,
            "required": false,
            "type": "string",
            "validate": undefined,
          },
        },
      },
      "kind": "update",
      "parentContext": [
        {
          "alias": "$target_0",
          "identifyWith": {
            "paramName": "address_id",
            "path": [
              "id",
            ],
            "type": "integer",
          },
          "kind": "model",
          "name": "Address",
          "namePath": [
            "Address",
          ],
          "retType": "Address",
          "select": [
            {
              "alias": "id",
              "expr": {
                "kind": "identifier-path",
                "namePath": [
                  "Address",
                  "id",
                ],
              },
              "kind": "expression",
              "type": {
                "kind": "integer",
                "nullable": false,
              },
            },
          ],
        },
      ],
      "response": [
        {
          "alias": "id",
          "expr": {
            "kind": "identifier-path",
            "namePath": [
              "Address",
              "user",
              "id",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "integer",
            "nullable": false,
          },
        },
        {
          "alias": "name",
          "expr": {
            "kind": "identifier-path",
            "namePath": [
              "Address",
              "user",
              "name",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "string",
            "nullable": false,
          },
        },
        {
          "alias": "address_id",
          "expr": {
            "kind": "identifier-path",
            "namePath": [
              "Address",
              "user",
              "address_id",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "integer",
            "nullable": false,
          },
        },
        {
          "alias": "details_id",
          "expr": {
            "kind": "identifier-path",
            "namePath": [
              "Address",
              "user",
              "details_id",
            ],
          },
          "kind": "expression",
          "type": {
            "kind": "integer",
            "nullable": true,
          },
        },
      ],
      "target": {
        "alias": "$target_1",
        "identifyWith": undefined,
        "kind": "relation",
        "name": "user",
        "namePath": [
          "Address",
          "user",
        ],
        "retType": "User",
        "select": [
          {
            "alias": "id",
            "expr": {
              "kind": "identifier-path",
              "namePath": [
                "Address",
                "user",
                "id",
              ],
            },
            "kind": "expression",
            "type": {
              "kind": "integer",
              "nullable": false,
            },
          },
        ],
      },
    },
    {
      "actions": [
        {
          "kind": "delete-one",
          "model": "User",
          "targetPath": [
            "$target_1",
          ],
        },
      ],
      "authSelect": [],
      "authorize": undefined,
      "kind": "delete",
      "parentContext": [
        {
          "alias": "$target_0",
          "identifyWith": {
            "paramName": "address_id",
            "path": [
              "id",
            ],
            "type": "integer",
          },
          "kind": "model",
          "name": "Address",
          "namePath": [
            "Address",
          ],
          "retType": "Address",
          "select": [
            {
              "alias": "id",
              "expr": {
                "kind": "identifier-path",
                "namePath": [
                  "Address",
                  "id",
                ],
              },
              "kind": "expression",
              "type": {
                "kind": "integer",
                "nullable": false,
              },
            },
          ],
        },
      ],
      "response": undefined,
      "target": {
        "alias": "$target_1",
        "identifyWith": undefined,
        "kind": "relation",
        "name": "user",
        "namePath": [
          "Address",
          "user",
        ],
        "retType": "User",
        "select": [
          {
            "alias": "id",
            "expr": {
              "kind": "identifier-path",
              "namePath": [
                "Address",
                "user",
                "id",
              ],
            },
            "kind": "expression",
            "type": {
              "kind": "integer",
              "nullable": false,
            },
          },
        ],
      },
    },
    {
      "actions": [],
      "authSelect": [],
      "authorize": undefined,
      "fieldset": undefined,
      "kind": "custom-one",
      "method": "GET",
      "parentContext": [
        {
          "alias": "$target_0",
          "identifyWith": {
            "paramName": "address_id",
            "path": [
              "id",
            ],
            "type": "integer",
          },
          "kind": "model",
          "name": "Address",
          "namePath": [
            "Address",
          ],
          "retType": "Address",
          "select": [
            {
              "alias": "id",
              "expr": {
                "kind": "identifier-path",
                "namePath": [
                  "Address",
                  "id",
                ],
              },
              "kind": "expression",
              "type": {
                "kind": "integer",
                "nullable": false,
              },
            },
          ],
        },
      ],
      "path": "custom",
      "responds": true,
      "response": undefined,
      "target": {
        "alias": "$target_1",
        "identifyWith": undefined,
        "kind": "relation",
        "name": "user",
        "namePath": [
          "Address",
          "user",
        ],
        "retType": "User",
        "select": [
          {
            "alias": "id",
            "expr": {
              "kind": "identifier-path",
              "namePath": [
                "Address",
                "user",
                "id",
              ],
            },
            "kind": "expression",
            "type": {
              "kind": "integer",
              "nullable": false,
            },
          },
        ],
      },
    },
  ],
  "entrypoints": [],
  "name": "",
  "target": {
    "alias": "$target_1",
    "identifyWith": undefined,
    "kind": "relation",
    "name": "user",
    "namePath": [
      "Address",
      "user",
    ],
    "retType": "User",
  },
}
`;
